# WTF-OTP

./: .gitignore  .travis.yml  MANIFEST.in  README.md  gulpfile.coffee  gulpfile.js  package-lock.json  package.json  pyproject.toml  renovate.json  renovate.json5  requirements.in  requirements.txt  setup.py  tox.ini
.github/workflows/: python-app.yml  python-deploy.yml  python-test.yml
.qlty/: qlty.toml
example/: app.py  requirements.txt
example/static/: angular_script.js
example/templates/: index.html  index_postload.html
tests/: __init__.py
tests/fields/: __init__.py  secret_fields.py  test_secret_fields.py
tests/validators/: __init__.py  hotp_check.py  test_common.py  test_totp_check.py  totp_check.py
tests/widgets/: __init__.py  secret_widget.py  test_init.py  test_secret_widget.py
wtf_otp/: __init__.py  templates.py  widgets.py
wtf_otp/fields/: __init__.py  secret_key.py
wtf_otp/validators/: __init__.py  otp.py
wtf_otp/widgets/: __init__.py  secret_key_widget.py  templates.py
wtf_otp/widgets/templates/: angular_script.html  angular_script.js  jquery_script.html  jquery_script.js  tags.html  widget.html
